Fixed search bar alignment problems on safari

--- a/admin/assets/stylesheets/elements/_filters.scss
+++ b/admin/assets/stylesheets/elements/_filters.scss
@@ -65,6 +65,7 @@
     input {
       width: 100%;
       padding-bottom: pem(4px);
+      margin-top: 0;
     }
   }
 }
